k8s/ingress/eats-surge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eats-surge-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: eats-surge.internal.molam
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eats-surge
                port:
                  number: 80
